Add some Impressum

--- a/index.html
+++ b/index.html
@@ -370,6 +370,23 @@
 
 <section>
   <h3>Thank you</h3>
+
+  <p>
+    <div>created by</div>
+    <div>
+      <a href="http://github.com/LFDM" target="_blank">Gernot Höflechner</a>
+    </div>
+    <div>
+      <a href="http://andimarek.com" target="_blank">Andi Marek</a>
+    </div>
+  </p>
+
+  <p>
+      <img src="images/si-logo-invers.png" width="300" alt=""/>
+      <div>
+        <a href="http://www.small-improvements.com">http://www.small-improvements.com</a>
+      </div>
+  </p>
 </section>
 
 
